Apply fix for horizontal scroll

--- a/css/main.scss
+++ b/css/main.scss
@@ -358,7 +358,8 @@ p {
     }
 
     .hori-content {
-        min-width: 100vw;
+        min-width: auto;
+        width: 100%;
         min-height: 100vh;
         display: flex;
 
